metadata/force-app/main/default/objects/Pricing_Rule__c/fields/Calculation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Percentage__c</fullName>
    <label>Calculation Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>