metadata/force-app/main/default/objects/Pricing_Rule__c/fields/Evaluation_Order__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Order__c</fullName>
    <label>Evaluation Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>