metadata/force-app/main/default/objects/Pricing_Rule__c/fields/Next_Rule__c.field-meta.xml
<CustomField>
    <fullName>Next_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Rule</label>
    <referenceTo>Pricing_Rule__c</referenceTo>
    <relationshipLabel>Pricing Rules</relationshipLabel>
    <relationshipName>Pricing_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>