metadata/force-app/main/default/objects/Pricing_Rule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volume Based</fullName>
            </value>
            <value>
                <fullName>Percentage of Solution ARR</fullName>
            </value>
            <value>
                <fullName>Percentage of Total ARR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>